k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-backend-deployment
  namespace: crud-app
  labels:
    app: crud-backend
  # annotations:
  #     k10.kasten.io/forcegenericbackup: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-backend
  template:
    metadata:
      labels:
        app: crud-backend
    spec:
      containers:
        - name: backend-api
          image: devopsflow999/crud-backend:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: crud-app
  labels:
    app: crud-backend # Matches the ServiceMonitor selector.spec.selector.matchLabels
spec:
  selector:
    app: crud-backend # Matches the template.metadata.labels of your pods
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http-web # Matches the ServiceMonitor selector.spec.endpoints[0].port
  type: ClusterIP
